# BagelEngine

./: .clang-format  .clang-tidy  .clangd  .env.cmake  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  PLAN.md  README.md  TODO.txt  build.bat  build.ps1  build.sh  cmake_install.cmake  download_sponza.ps1  imgui.ini  lib-setup.bat  lib-setup.sh  setup.bat
docs/: source_layers.md  space_zoo_plan.md
lego/: build_bake_connectors.bat  coacd_decompose.py  setup_coacd.bat  setup_coacd.sh
maps/: cube_field.yaml  dragon.yaml  ikbone.yaml  map.bmap  monkey.yaml  sponza.yaml  textmap.yaml
materials/: Bricks089_1K-PNG_Color.ktx  Bricks089_1K-PNG_RoughnessMetal.psd  convertToKtx.bat  texture.ktx
materials/models/: axis.ktx  convertToKtx.bat
models/: axis.blend  axis.blend1  axis.mtl  cylinder.blend  cylinder.blend1  cylinder.mtl  faces.blend  faces.blend1  flatfaces.mtl  grid.blend  grid.blend1  monkey.blend  monkey.blend1  monkey.gltf  monkey_scene.glb  monkey_scene.gltf  monkeys.gltf  multimat.blend  multimat.blend1  multimat.mtl  wiresphere.mtl
models/ikleg/: ikbone.blend  ikbone.blend1  ikbone.glb  ikbone.yaml
models/monkey_bone_anim/: monkeybone.blend  monkeybone.blend1  monkeybone.glb
models/sponza/: Sponza.yaml
shaders/: bloom.frag  bloom.frag.spv  bloom_add.frag  bloom_add.frag.spv  bloom_downsample.frag  bloom_downsample.frag.spv  bloom_upsample.frag  bloom_upsample.frag.spv  compile.bat  cubemap.glsl  data_transform.glsl  deferred_lighting.frag  deferred_lighting.frag.spv  deferred_lighting.vert  deferred_lighting.vert.spv  froxel_rc_update.comp  froxel_rc_update.comp.spv  gbuffer_fill.frag  gbuffer_fill.frag.spv  gbuffer_fill.vert  gbuffer_fill.vert.spv  noise.glsl  pbr.glsl  planet_gbuffer.frag  planet_gbuffer.frag.spv  planet_gbuffer.vert  planet_gbuffer.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  radiosity.frag  radiosity.frag.spv  shadow.vert  shadow.vert.spv  shadow_skinned.vert  shadow_skinned.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  (+23 more)
shaders/compute/: test.comp
src/: bagel_application.cpp  bagel_application.hpp  bagel_bindless.cpp  bagel_bindless.hpp  bagel_buffer.cpp  bagel_buffer.hpp  bagel_camera.cpp  bagel_camera.hpp  bagel_connection_graph.hpp  bagel_console_commands.cpp  bagel_console_commands.hpp  bagel_descriptors.cpp  bagel_descriptors.hpp  bagel_ecs_components.cpp  bagel_ecs_components.hpp  bagel_ecs_serialize.hpp  bagel_engine_config.hpp  bagel_engine_device.cpp  bagel_engine_device.hpp  bagel_engine_swap_chain.cpp  bagel_engine_swap_chain.hpp  bagel_frame_info.hpp  bagel_frustum.hpp  bagel_gameobject.cpp  bagel_gameobject.hpp  bagel_hierachy.cpp  bagel_hierachy.hpp  bagel_imgui.cpp  bagel_imgui.h  bagel_imgui.hpp  bagel_keybinds.hpp  bagel_material.cpp  bagel_material.hpp  bagel_model.cpp  bagel_model.hpp  bagel_model_cache.cpp  bagel_model_cache.hpp  bagel_model_loader.cpp  bagel_model_loader.hpp  bagel_pipeline.cpp  (+32 more)
src/animation/: bagel_animation.cpp  bagel_animation.hpp  bagel_skin_manager.cpp  bagel_skin_manager.hpp
src/application/: bagel_application.cpp  bagel_application.hpp  bagel_application_commands.cpp  bagel_application_imgui.cpp
src/bagel_jolt/: bagel_jolt.cpp  bagel_jolt.hpp
src/components/: data_buffer.hpp  light.hpp  model.hpp  physics.hpp  planet.cpp  planet.hpp  transform.cpp  transform.hpp
src/compute_systems/: bagel_compute_system.cpp  bagel_compute_system.hpp  planet_compute_system.cpp  planet_compute_system.hpp
src/ecs/: bagel_ecs_components.hpp  bagel_ecs_serialize.hpp
src/engine/: bagel_descriptors.cpp  bagel_descriptors.hpp  bagel_engine_config.hpp  bagel_engine_device.cpp  bagel_engine_device.hpp  bagel_engine_swap_chain.cpp  bagel_engine_swap_chain.hpp  bagel_pipeline.cpp  bagel_pipeline.hpp  bagel_window.cpp
src/game/: planet_terrain.cpp  planet_terrain.hpp
src/imgui/: bagel_imgui.cpp  bagel_imgui.hpp
src/lego/: CONNECTORS.md  baked_collision.cpp  baked_collision.hpp  baked_connectors.cpp  baked_connectors.hpp  connections.hpp  connector_types.hpp  ldraw_library.cpp  ldraw_library.hpp  ldraw_model_loader.cpp  ldraw_model_loader.hpp  lego_browser_panel.cpp  lego_browser_panel.hpp  lego_connection_component.hpp  lego_connection_render_system.cpp  lego_connection_render_system.hpp  lego_model_builder.hpp  part_catalog.cpp  part_catalog.hpp  part_library.cpp  part_library.hpp  part_system.cpp  part_system.hpp
src/map/: bagel_map_io.cpp  bagel_map_io.hpp  bagel_text_map.cpp  bagel_text_map.hpp
src/math/: bagel_math.hpp  planet_cubemap.hpp  simplex_noise.hpp
src/model/: bagel_model.cpp  bagel_model.hpp  bagel_model_cache.hpp  mcb_buffer.cpp  mcb_procedural.cpp  model_component_builder.cpp  model_component_builder.hpp
src/model_loaders/: bagel_model_loader.cpp  bagel_model_loader.hpp  generated.cpp  generated.hpp  gltf.cpp  gltf.hpp  model_load_settings.hpp  model_sidecar.cpp  model_sidecar.hpp  obj.cpp  obj.hpp
src/physics/: bagel_jolt.cpp  bagel_jolt.hpp  bagel_physics.cpp  bagel_physics.h
src/planet/: noise_setting.hpp
src/render_systems/: animated_gbuffer_render_system.cpp  animated_gbuffer_render_system.hpp  animated_shadow_render_system.cpp  animated_shadow_render_system.hpp  bagel_render_system.cpp  bagel_render_system.hpp  bagel_threaded_render_system.cpp  bagel_threaded_render_system.hpp  bloom_add_render_system.cpp  bloom_add_render_system.hpp  bloom_render_system.cpp  bloom_render_system.hpp  composit_render_system.cpp  composit_render_system.hpp  depths_render_system.hpp  ecs_model_render_system.cpp  ecs_model_render_system.hpp  froxel_rc_system.cpp  froxel_rc_system.hpp  gbuffer_render_system.cpp  gbuffer_render_system.hpp  gizmo_render_system.cpp  gizmo_render_system.hpp  planet_gbuffer_render_system.cpp  planet_gbuffer_render_system.hpp  planet_render_system.cpp  planet_render_system.hpp  point_light_render_system.cpp  point_light_render_system.hpp  radiosity_render_system.cpp  radiosity_render_system.hpp  shadow_render_system.cpp  (+18 more)
tools/: gen_textures.py  include_layers.py
(+64 files in other folders)
